...
        setupMapView()
        getCurrentLocation()
    }
    
    /// Setup initial view
    func setupView(){
        self.title = "Restaurants"
        viewModel.delegate = self
        LocationManager.shared.delegate = self
        
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Near Me",  style: .plain, target: self, action: #selector(self.getCurrentLocation))

    }
    
    /// Set up map view
    func setupMapView(){
        mapView = MKMapView.init(frame: self.view.frame)
...
